# pico_person_detection_thermal

./: .gitignore  CMakeLists.txt  ILI9341.cpp  ILI9341.h  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.cpp  MLX90640_I2C_Driver.h  README.md  ei_classifier_porting.cpp  main.c  main.cpp  pico_person_detection_thermal.c  raw_features.h
data_collection_and_training/: upload.py
data_collection_and_training/formatted_data/: 1  Background.readings_42_label_3.json  Background.readings_43_label_3.json  Background.readings_44_label_3.json  Background.readings_45_label_3.json  Background.readings_46_label_3.json  Background.readings_47_label_3.json  Background.readings_48_label_3.json  Background.readings_49_label_3.json  Background.readings_50_label_3.json  Background.readings_51_label_3.json  Background.readings_52_label_3.json  Background.readings_53_label_3.json  Background.readings_54_label_3.json  Object.readings_30_label_2.json  Object.readings_31_label_2.json  Object.readings_32_label_2.json  Object.readings_33_label_2.json  Object.readings_34_label_2.json  Object.readings_35_label_2.json  Object.readings_36_label_2.json  Object.readings_37_label_2.json  Object.readings_38_label_2.json  Object.readings_39_label_2.json  Object.readings_40_label_2.json  Object.readings_41_label_2.json  Object.readings_55_label_2.json  Object.readings_56_label_2.json  Person.readings_0_label_1.json  Person.readings_10_label_1.json  Person.readings_11_label_1.json  Person.readings_12_label_1.json  Person.readings_13_label_1.json  Person.readings_14_label_1.json  Person.readings_15_label_1.json  Person.readings_16_label_1.json  Person.readings_17_label_1.json  Person.readings_18_label_1.json  Person.readings_19_label_1.json  Person.readings_1_label_1.json  (+18 more)
data_collection_and_training/raw_data/: readings_0_label_1.csv  readings_10_label_1.csv  readings_11_label_1.csv  readings_12_label_1.csv  readings_13_label_1.csv  readings_14_label_1.csv  readings_15_label_1.csv  readings_16_label_1.csv  readings_17_label_1.csv  readings_18_label_1.csv  readings_19_label_1.csv  readings_1_label_1.csv  readings_20_label_1.csv  readings_21_label_1.csv  readings_22_label_1.csv  readings_23_label_1.csv  readings_24_label_1.csv  readings_25_label_1.csv  readings_26_label_1.csv  readings_27_label_1.csv  readings_28_label_1.csv  readings_29_label_1.csv  readings_2_label_1.csv  readings_30_label_2.csv  readings_31_label_2.csv  readings_32_label_2.csv  readings_33_label_2.csv  readings_34_label_2.csv  readings_35_label_2.csv  readings_36_label_2.csv  readings_37_label_2.csv  readings_38_label_2.csv  readings_39_label_2.csv  readings_3_label_1.csv  readings_40_label_2.csv  readings_41_label_2.csv  readings_42_label_3.csv  readings_43_label_3.csv  readings_44_label_3.csv  readings_45_label_3.csv  (+17 more)
data_collection_and_training/wio_terminal_sketch/: MLX90640_I2C_Driver.cpp  Thermal_camera_data_collection.ino
model-parameters/: dsp_blocks.h  model_metadata.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
